--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -13,7 +13,9 @@
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.10.2",
+    "@livekit/components-react": "^2.0.6",
+    "@livekit/components-styles": "^1.0.11",
+    "@prisma/client": "^5.12.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -34,6 +36,7 @@
     "data-fns": "^1.1.0",
     "date-fns": "^3.6.0",
     "emoji-mart": "^5.5.2",
+    "livekit-server-sdk": "^2.1.2",
     "lucide-react": "^0.335.0",
     "next": "14.1.0",
     "next-theme": "^0.1.5",
